--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "cross-env": "^5.0.0",
     "cross-spawn": "^5.1.0",
     "css-loader": "^0.28.3",
-    "electron": "^1.6.10",
+    "electron": "^1.6.11",
     "electron-builder": "^19.8.0",
     "electron-devtools-installer": "^2.2.0",
     "enzyme": "^2.9.1",
@@ -178,11 +178,14 @@
     "fast-csv": "^2.4.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.3",
+    "json-loader": "^0.5.4",
     "material-ui": "^0.18.6",
     "nedb": "^1.8.0",
     "react": "^15.6.1",
+    "react-csv": "^1.0.8",
     "react-dom": "^15.6.1",
     "react-dropzone": "^3.13.3",
+    "react-excel-workbook": "^0.0.4",
     "react-hot-loader": "3.0.0-beta.6",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
