--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "json-loader": "^0.5.4",
     "material-ui": "^0.18.6",
     "nedb": "^1.8.0",
+    "nedb-promises": "^1.1.0",
     "react": "^15.6.1",
     "react-csv": "^1.0.8",
     "react-dom": "^15.6.1",
